# MoChiOn

./: .gitignore  csv_output.py  data_service.py  emotion_input.py  main.py  pose_cam_demo.py  pose_input.py  readme.md
tools/browsing/: 18landmark.nnp  5sNewModel.nnp  main.py  pyproject.toml  readme.md
tools/browsing/templates/: index.html
tools/create_dataset/: create_dataset.py  csv_output.py  landmark.py  main.py  mover.py  readme.md  test_01000.csv
tools/create_dataset/rename/: rename.py
tools/osc/: main.py  pyproject.toml
tools/osc/model/: model.nnp
tools/osc/modlues/: __init__.py  camera.py  gesture.py  image_process.py  osc.py  pose.py  pose_process.py
