[tool.poetry]
name = "motion-tracking-web-analytics"
version = "0.1.0"
description = ""
authors = ["touka_aoi_desktop <toukaseisei@gmail.com>"]
readme = "README.md"
packages = [{include = "motion_tracking_web_analytics"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.2"
flask-socketio = "^5.3.4"
opencv-python = "^4.7.0.72"
mediapipe = "^0.10.0"
nnabla = "^1.35.1"
pywin32 = "^306"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
